Bug 392061. Live region event attributes not persisting in AT-SPI, r=ginn.chen, a=dsicore